# AP-Module-C-Monday-Excercises

./: .replit  CMakeLists.txt  Exercise.cpp  Exercise.h  README.md  iohelper.h  main.cpp  mathshelper.h
.github/workflows/: cmake.yml
Exercise1/: Exercise1.cpp  Exercise1.h
Exercise2/: Exercise2.cpp  Exercise2.h
Exercise3/: Exercise3.cpp  Exercise3.h
Exercise4/: Exercise4.cpp  Exercise4.h
Exercise5/: Exercise5.cpp  Exercise5.h
Exercise6/: Exercise6.cpp  Exercise6.h
Exercise7/: Exercise7.cpp  Exercise7.h
Exercise8/: Exercise8.cpp  Exercise8.h
Exercise9/: Exercise9.cpp  Exercise9.h
Helpers/: iohelper.cpp  iohelper.h  mathshelper.cpp  mathshelper.h
