cmake_minimum_required(VERSION 3.17)
project(AdaAdvancedProgramming_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(AdaAdvancedProgramming_1 main.cpp Helpers/iohelper.cpp Helpers/iohelper.h Helpers/mathshelper.cpp Helpers/mathshelper.h Exercise1/Exercise1.cpp Exercise1/Exercise1.h Exercise.cpp Exercise.h Exercise2/Exercise2.cpp Exercise2/Exercise2.h Exercise3/Exercise3.cpp Exercise3/Exercise3.h Exercise4/Exercise4.cpp Exercise4/Exercise4.h Exercise5/Exercise5.cpp Exercise5/Exercise5.h Exercise6/Exercise6.cpp Exercise6/Exercise6.h)